# llm-utils

./: README.md  pyproject.toml
data/llm_healing/clue_answer/: 01_simple_case.json  02_extra_whitespace.json  03_swapped_order.json  04_no_newline.json  05_hard_case_1.json  06_hard_case_2.json  07_missing_clue.json  08_missing_answer.json  09_just_text.json  10_wrong_format.json
data/llm_healing/json/: 01_trailing_comma.json  02_single_quotes.json  03_missing_comma.json  04_wrapped_in_text.json  05_not_json.json  06_nested_error.json  07_unclosed_string.json  08_multiple_errors.json  09_json_with_comments.json  10_empty_input.json
data/llm_healing/list_of_strings/: 01_bullet_points.json  02_numbered_list.json  03_comma_separated.json  04_embedded_in_text.json  05_mixed_format.json  06_run_on_sentence.json  07_single_item.json  08_empty_list.json  09_paragraph.json  10_list_with_numbers.json
llmutils/: llm_retry.py  llm_with_retry.py  self_healing.py
scripts/: evaluate_llm_healing.py  two-shot-prompt.md
tests/: test_llm_retry.py  test_llm_with_retry.py  test_self_healing.py
