[project]
name = "llmutils"
version = "0.1.0"
description = "Utilities for llms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.3.25",
    "pip>=25.1.1",
    "pytest>=8.4.1",
    "tenacity>=8.5.0",
    "python-dotenv>=1.0.1",
]

[tool.setuptools.packages.find]
include = ["llmutils"]

[dependency-groups]
dev = [
    "llmutils",
]

[tool.uv.sources]
llmutils = { workspace = true }
